# Hecate

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  diesel.toml  package.json  release  start  test.sh
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  release-binary.yml  release.yml  rust.yml
ci/: package-lock.json  package.json  publish.js  publish.sh
ci/cloudformation/: ci.template.js
cloudformation/: ci.template
hecate/: Cargo.toml
hecate/src/: cli.yml  db.rs  lib.rs  main.rs  schema.sql
hecate/src/auth/: config.rs  derive.rs  middleware.rs  mod.rs
hecate/src/bounds/: mod.rs
hecate/src/clone/: mod.rs
hecate/src/delta/: mod.rs
hecate/src/err/: mod.rs
hecate/src/feature/: mod.rs
hecate/src/meta/: mod.rs
hecate/src/mvt/: grid.rs  mod.rs
hecate/src/osm/: mod.rs  node.rs  rel.rs  tree.rs  way.rs
hecate/src/stats/: mod.rs
hecate/src/stream/: mod.rs
hecate/src/style/: mod.rs
hecate/src/user/: mod.rs  token.rs  usr.rs
hecate/src/validate/: mod.rs
hecate/src/webhooks/: mod.rs
hecate/src/worker/: mod.rs
hecate/tests/: api.rs  auth_closed.rs  auth_default.rs  auth_disabled.rs  bounds.rs  clone.rs  deltas.rs  feature_at.rs  features.rs  force.rs  history.rs  key.rs  meta.rs  query.rs  schema.rs  stats.rs  styles.rs  test.sh  tiles.rs  token.rs  user_modify.rs  user_session.rs  user_session_closed.rs  webhooks.rs  xml_upload.rs
hecate/tests/fixtures/: auth.default.json  auth.disabled.json  auth.meta.json  source_schema.json  us_dc_pts.json
hecate_derive/: Cargo.toml
hecate_derive/src/: lib.rs
hecate_ui/: index.html
hecate_ui/src/: App.vue  main.js
hecate_ui/src/components/: Error.vue
hecate_ui/src/modals/: Self.vue  Settings.vue  Style.vue  User.vue
hecate_ui/src/panels/: Bounds.vue  Styles.vue
migrations/: README.md  v0.82.0-pre.sql  v0.85.0-pre.sql
scripts/: publish.sh  token.js
src/: cli.yml  db.rs  lib.rs  main.rs  models.rs  schema.rs  schema.sql  source_schema.json
src/auth/: config.rs  middleware.rs  mod.rs
src/bounds/: mod.rs
src/changeset/: mod.rs
src/clone/: mod.rs
src/delta/: mod.rs
src/err/: mod.rs
src/feature/: mod.rs
src/meta/: mod.rs
src/migrations/: README.md  geo_history-2019-11-24.sql  v0.80.0-post.sql  v0.80.0-pre.sql
src/mvt/: builder.rs  builder_test.rs  encoder.rs  geom.rs  geom_encoder.rs  geom_encoder_test.rs  grid.rs  mod.rs  proto.proto  proto.rs  screen.rs
src/osm/: mod.rs  node.rs  rel.rs  tree.rs  way.rs
src/stats/: mod.rs
src/stream/: mod.rs
src/style/: mod.rs
src/user/: mod.rs  token.rs  user.rs  usr.rs
src/validate/: mod.rs
src/webhooks/: mod.rs
src/wfs/: capabilities.rs  describe_feature_type.rs  get_feature.rs  mod.rs
src/worker/: mod.rs
src/xml/: mod.rs  node.rs  rel.rs  tree.rs  way.rs
test/: address.test.js  bounds.test.js  feature.js  feature.test.js  features.js  features.test.js  test.js  test.sh  users.test.js  xml.test.js  xml_download.test.js
test/fixtures/: us_dc_pts.json  xml#changeset#upload#node  xml#changeset#upload#point  xml#changeset#upload#way
tests/: api.rs  auth_closed.rs  auth_default.rs  bounds.rs  clone.rs  deltas.rs  feature.rs  feature_at.rs  feature_history_at.rs  features.rs  features.test.js  force.rs  history.rs  key.rs  meta.rs  query.rs  schema.rs  stats.rs  styles.rs  test.sh  tiles.rs  token.rs  user_modify.rs  user_session.rs  user_session_closed.rs  users.rs  users.test.js  webhooks.rs  wfs_capabilities.rs  xml_download.rs  xml_upload.rs
tests/fixtures/: auth.closed.json  auth.default.json  auth.meta.json  source_schema.json
web/: README.md  index.html  main.css  main.js  package.json
web/login/: index.html
web/src/: App.vue  Foot.vue  Heading.vue  Panel.vue  main.js
web/src/components/: Key.vue
web/src/modals/: Login.vue  Query.vue  Register.vue  Self.vue  Settings.vue  Style.vue  User.vue
web/src/panels/: Bounds.vue  Deltas.vue  Feature.vue  Styles.vue
