[package]
name = "hecate"
version = "0.71.0"
edition = "2018"
authors = ["ingalls <ingalls@protonmail.com>"]
license = "MIT"
description = "OpenStreetMap Inspired Data Storage Backend Focused on Performance and GeoJSON Interchange"

homepage = "https://github.com/mapbox/Hecate"
repository = "https://github.com/mapbox/Hecate"

readme = "README.md"

categories = ["database"]


[dependencies]
reqwest = "0.9.5"
tilecover = "1.1.1"
crossbeam = "0.7"
valico = "3.0"
rand = "0.6"
postgis = "0.6.0"
protobuf = "1.5"
base64 = "0.10"
rocket = "0.4.1"
rocket_contrib="0.4.1"
geojson = "0.16.0"
quick-xml = "0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
env_logger = "0.6"
json-patch = { git = "https://github.com/ingalls/json-patch", branch = "uniform_paths" }

[dependencies.geo]
version = "0.12"
features = ["postgis-integration"]


[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.postgres]
version = "0.15.2"
features = [
    "with-serde_json",
    "with-chrono"
]

[dependencies.clap]
features = ["yaml"]
version = "2.33.0"

[[bin]]
name = "hecate"
doc = false
